--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Contact Me</h4>
                         <p class="lead mb-0">
-                            localhost
+                            <a href="mailto:bagariaganesh@gmail.com">bagariaganesh@gmail.com</a>
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
